@@ -1,3 +1,7 @@
+2010-04-03 Homer Xing <homer.xing@gmail.com>
+
+    * Fix problem: Program crashes when change shortcut keys.
+
 2010-04-02 Starboy Qi <starboy.qi@gmail.com>
 
     * Improve copyright text in "About" dialog
